--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -3,5 +3,15 @@
 }
 
 <div class="text-center">
-    
+    <form>
+        Category:<br/>
+        <input type="text" name="name" value=""/><br/>
+        Description:<br/>
+        <input type="text" name="description" value=""/><br/>
+        Price:<br/>
+        <input type="number" name="price" value=""/><br/>
+        Quantity:<br/>
+        <input type="number" name="quantity" value=""/><br/>
+        <input type="submit" value="Create"/><br/>
+    </form>
 </div>
