--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,9 +1,32 @@
 ﻿@model IndexModel;
 @{
     ViewData["Title"] = "Home Page";
+    var products = Model.Products;
 }
 
 <div class="text-center">
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>Название</th>
+            <th>Описание</th>
+            <th>Цена за штуку</th>
+            <th>Количество</th>
+            <th>Действие</th>
+        </tr>
+        @for (int i = 0; i < products.Count; i++)
+        {
+            <tr>
+                <td>@(i + 1)<td>
+                <td>@products[i].Category<td>
+                <td>@products[i].Description<td>
+                <td>@products[i].Price<td>
+                <td>@products[i].Quantity<td>
+                <td>✎⌫<td>
+            </tr>
+        }
+    </table>
+    <h3>Product:</h3>
     <form action="@Url.Action("Another", "Home")" method="post">
         Category:<br/>
         <input type="text" name="Category" value=""/><br/>
