--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -26,8 +26,8 @@
             </tr>
         }
     </table>
-    <h3>Product:</h3>
-    <form action="@Url.Action("Another", "Home")" method="post">
+    <h3>Новый продукт:</h3>
+    <form action="@Url.Action("CreateProduct", "Home")" method="post">
         Category:<br/>
         <input type="text" name="Category" value=""/><br/>
         Description:<br/>
