logic for adding a product to the product list and displaying the table

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -17,12 +17,12 @@
         @for (int i = 0; i < products.Count; i++)
         {
             <tr>
-                <td>@(i + 1)<td>
-                <td>@products[i].Category<td>
-                <td>@products[i].Description<td>
-                <td>@products[i].Price<td>
-                <td>@products[i].Quantity<td>
-                <td>✎⌫<td>
+                <td>@(i + 1)</td>
+                <td>@products[i].Category</td>
+                <td>@products[i].Description</td>
+                <td>@products[i].Price</td>
+                <td>@products[i].Quantity</td>
+                <td>✎⌫</td>
             </tr>
         }
     </table>
