--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
         @for (int i = 0; i < products.Count; i++)
         {
             <tr>
-                <td>@(i + 1)</td>
+                <td>@products[i].ID</td>
                 <td>@products[i].Category</td>
                 <td>@products[i].Description</td>
                 <td>@products[i].Price</td>
